--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ dependencies:
   - pip
   - pip:
     - peekingduck
-    - beautifulsoup4=4.11.2
-    - opencv-python=4.7.0
-    - pandas=1.5.3
-    - numpy=1.24.2
+    - beautifulsoup4==4.11.2
+    - opencv-python==4.7.0
+    - pandas==1.5.3
+    - numpy==1.24.2
