--- a/.github/workflows/get_counts.yml
+++ b/.github/workflows/get_counts.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install requirements
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
