--- a/.github/workflows/get_counts.yml
+++ b/.github/workflows/get_counts.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install requirements
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA/bin/conda env update --file environment.yml --name base
+        conda env update --file environment.yml --name base
     - name: Run Scraper
       run: |
         python -m src.main
