--- a/.github/workflows/get_counts.yml
+++ b/.github/workflows/get_counts.yml
@@ -33,6 +33,6 @@ jobs:
       run: |
         git config user.name "${GITHUB_ACTOR}"
         git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        git add counts_dataset.csv  # or git add -A to add all files
+        git add data/counts_dataset.csv  # or git add -A to add all files
         git commit -m "Updated counts_dataset.csv"
         git push 
