--- a/.github/workflows/get_counts.yml
+++ b/.github/workflows/get_counts.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Set Timezone
+      uses: szenius/set-timezone@v1.0
+      with:
+        timezoneLinux: "Asia/Singapore"
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Set up Python
@@ -28,7 +32,6 @@ jobs:
     - name: Run Scraper
       run: |
         python -m src.main
-
     - name: Commit and push
       run: |
         git config user.name "${GITHUB_ACTOR}"
