--- a/.github/workflows/get_counts.yml
+++ b/.github/workflows/get_counts.yml
@@ -1,9 +1,8 @@
 name: GetCounts
 
 on:
-# for now, disable schedule
-#   schedule:
-#     - cron: "0 4 * * *"
+  schedule:
+    - cron: "0 * * * *"
   workflow_dispatch:
   
 jobs:
