--- a/.github/workflows/push_to_hf.yml
+++ b/.github/workflows/push_to_hf.yml
@@ -11,11 +11,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Install requirements
         run: pip install huggingface_hub
+      - name: Hugging Face CLI login
+        run: huggingface-cli login --api-key ${{ secrets.HF_API_KEY }}
+        env:
+          HF_API_KEY: ${{ secrets.HF_API_KEY }}
+          HUGGINGFACE_CO_API: "https://huggingface.co"
       - name: Push CSV file to Hugging Face Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HUGGINGFACE_HUB_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          huggingface-cli login
           cd causion
           huggingface-cli dataset create counts_dataset
           huggingface-cli dataset upload counts_dataset ./data/counts_dataset.csv --overwrite
