--- a/.github/workflows/get_counts.yml
+++ b/.github/workflows/get_counts.yml
@@ -40,6 +40,6 @@ jobs:
         git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
     - name: Upload to HuggingFace
       env: |
-        HF_TOKEN = ${ secrets.HF_TOKEN }
+        HF_TOKEN: ${{ secret.HF_TOKEN }}
       run: |
         python -m src.upload_to_hf
