--- a/.github/workflows/upload_to_hf.yml
+++ b/.github/workflows/upload_to_hf.yml
@@ -28,7 +28,7 @@ jobs:
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           conda env update --file environment.yml --name base
       - name: Upload to HuggingFace
-        env: |
+        env: 
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           python -m src.upload_to_hf
