--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,5 @@ dependencies:
     - opencv-python==4.7.0.68
     - pandas==1.5.3
     - numpy==1.24.2
-    - huggingface_hub
-    - datasets
+    - huggingface_hub==0.12.0
+    - datasets=2.9.0
