--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,10 @@ dependencies:
   - pip
   - pip:
     - requests
-    - peekingduck
+    - peekingduck >= 1.3.0
     - beautifulsoup4==4.11.2
     - opencv-python==4.7.0.68
-    - pandas==1.5.3
-    - numpy==1.24.2
+    - pandas>=1.0.0
+    - numpy>=1.0.0
     - huggingface_hub==0.12.0
-    - datasets>= 2.8
+    - datasets >= 2.8
