--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ dependencies:
   - pip
   - pip:
     - requests
-    - peekingduck >= 1.3.0
+    - peekingduck 
     - beautifulsoup4==4.11.2
     - opencv-python==4.7.0.68
     - pandas>=1.0.0
