--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,8 @@ dependencies:
     - requests
     - peekingduck 
     - beautifulsoup4==4.11.2
-    - opencv-python==4.7.0.68
+    - opencv-python>=4.1.0
     - pandas>=1.0.0
     - numpy>=1.0.0
-    - huggingface_hub==0.12.0
+    - huggingface_hub>=0.12.0
     - datasets >= 2.8
