--- a/.github/workflows/upload_to_hf.yml
+++ b/.github/workflows/upload_to_hf.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install requirements
         run: |
           # $CONDA is an environment variable pointing to the root of the miniconda directory
-          conda env update --file environment.yml --name base
+          conda env update --file huggingface_env.yml --name base
       - name: Upload to HuggingFace
         env: 
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
