decrease threshold and include bicycles

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,1 +1,3 @@
 data_source: https://onemotoring.lta.gov.sg/content/onemotoring/home/driving/traffic_information/traffic-cameras/woodlands.html/
+score_threshold: 0.1
+input_size: 1080
